--- a/.github/workflows/deploy.dev.yml
+++ b/.github/workflows/deploy.dev.yml
@@ -25,16 +25,16 @@ jobs:
       - name: Define client-side environment
         run: |
           echo "REACT_APP_MILJO=DEV" >> $GITHUB_ENV
-          echo "REACT_APP_DINE_SAKER_URL=https://person.dev.nav.no/mine-saker" >> $GITHUB_ENV
-          echo "REACT_APP_PDL_URL=https://www.dev.nav.no/person/pdl-fullmakt-ui" >> $GITHUB_ENV
+          echo "REACT_APP_DINE_SAKER_URL=https://person.intern.dev.nav.no/mine-saker" >> $GITHUB_ENV
+          echo "REACT_APP_PDL_URL=https://www.intern.dev.nav.no/person/pdl-fullmakt-ui" >> $GITHUB_ENV
           echo "REACT_APP_BFT_URL=https://tilretteleggingsbehov-innsyn.ekstern.dev.nav.no/person/behov-for-tilrettelegging" >> $GITHUB_ENV
-          echo "REACT_APP_SKJERMING_URL=https://person.dev.nav.no/person/personopplysninger/skjerming" >> $GITHUB_ENV
-          echo "REACT_APP_URL=https://www.dev.nav.no/person/personopplysninger" >> $GITHUB_ENV
+          echo "REACT_APP_SKJERMING_URL=https://person.intern.dev.nav.no/person/personopplysninger/skjerming" >> $GITHUB_ENV
+          echo "REACT_APP_URL=https://www.intern.dev.nav.no/person/personopplysninger" >> $GITHUB_ENV
           echo "REACT_APP_API_URL=https://person.ekstern.dev.nav.no/person/personopplysninger-api" >> $GITHUB_ENV
           echo "REACT_APP_DSOP_URL=https://person.ekstern.dev.nav.no/person/dsop-api" >> $GITHUB_ENV
           echo "REACT_APP_TJENESTER_URL=https://tjenester-q1.nav.no" >> $GITHUB_ENV
-          echo "REACT_APP_LOGIN_URL=https://loginservice.dev.nav.no/login" >> $GITHUB_ENV
-          echo "REACT_APP_DITT_NAV_URL=https://www.dev.nav.no/minside" >> $GITHUB_ENV
+          echo "REACT_APP_LOGIN_URL=https://loginservice.ekstern.dev.nav.no/login" >> $GITHUB_ENV
+          echo "REACT_APP_DITT_NAV_URL=https://www.intern.dev.nav.no/minside" >> $GITHUB_ENV
           echo "REACT_APP_PENSJONSOPPTJENING_URL=https://www-q0.nav.no/pensjon/opptjening" >> $GITHUB_ENV
           echo "REACT_APP_INNLOGGINGSSTATUS_URL=https://www.dev.nav.no/person/nav-dekoratoren-api/auth" >> $GITHUB_ENV
       - run: npm ci
@@ -56,6 +56,7 @@ jobs:
             - www.intern.dev.nav.no
             - dev.nav.no
             - person.ekstern.dev.nav.no
+            - person.intern.dev.nav.no
             - dekoratoren.dev.nav.no
           image: $IMAGE_REGISTRY/$IMAGE_NAME
           version: $IMAGE_VERSION
