--- a/.github/workflows/deploy.dev.yml
+++ b/.github/workflows/deploy.dev.yml
@@ -28,12 +28,12 @@ jobs:
           echo "REACT_APP_DINE_SAKER_URL=https://person.intern.dev.nav.no/mine-saker" >> $GITHUB_ENV
           echo "REACT_APP_PDL_URL=https://www.intern.dev.nav.no/person/pdl-fullmakt-ui" >> $GITHUB_ENV
           echo "REACT_APP_BFT_URL=https://tilretteleggingsbehov-innsyn.ekstern.dev.nav.no/person/behov-for-tilrettelegging" >> $GITHUB_ENV
-          echo "REACT_APP_SKJERMING_URL=https://person.intern.dev.nav.no/person/personopplysninger/skjerming" >> $GITHUB_ENV
+          echo "REACT_APP_SKJERMING_URL=https://www.intern.dev.nav.no/person/personopplysninger/skjerming" >> $GITHUB_ENV
           echo "REACT_APP_URL=https://www.intern.dev.nav.no/person/personopplysninger" >> $GITHUB_ENV
           echo "REACT_APP_API_URL=https://www.intern.dev.nav.no/person/personopplysninger-api" >> $GITHUB_ENV
           echo "REACT_APP_DSOP_URL=https://www.intern.dev.nav.no/person/dsop-api" >> $GITHUB_ENV
           echo "REACT_APP_TJENESTER_URL=https://tjenester-q1.nav.no" >> $GITHUB_ENV
-          echo "REACT_APP_LOGIN_URL=https://loginservice.ekstern.dev.nav.no/login" >> $GITHUB_ENV
+          echo "REACT_APP_LOGIN_URL=https://loginservice.intern.dev.nav.no/login" >> $GITHUB_ENV
           echo "REACT_APP_DITT_NAV_URL=https://www.intern.dev.nav.no/minside" >> $GITHUB_ENV
           echo "REACT_APP_PENSJONSOPPTJENING_URL=https://www-q0.nav.no/pensjon/opptjening" >> $GITHUB_ENV
           echo "REACT_APP_INNLOGGINGSSTATUS_URL=https://www.ekstern.dev.nav.no/person/nav-dekoratoren-api/auth" >> $GITHUB_ENV
