--- a/package.json
+++ b/package.json
@@ -28,21 +28,21 @@
         "analyze": "source-map-explorer 'build/static/js/*.js'"
     },
     "dependencies": {
-        "@grafana/faro-web-sdk": "1.3.6",
-        "@grafana/faro-web-tracing": "1.3.6",
-        "@navikt/aksel-icons": "5.15.0",
-        "@navikt/arbeidsforhold": "3.3.4",
-        "@navikt/ds-css": "5.15.0",
-        "@navikt/ds-react": "5.15.0",
+        "@grafana/faro-web-sdk": "1.4.1",
+        "@grafana/faro-web-tracing": "1.4.1",
+        "@navikt/aksel-icons": "6.1.1",
+        "@navikt/arbeidsforhold": "3.3.5-beta.0",
+        "@navikt/ds-css": "6.1.1",
+        "@navikt/ds-react": "6.1.1",
         "@navikt/fnrvalidator": "1.3.3",
-        "@navikt/nav-dekoratoren-moduler": "2.1.5",
-        "@react-pdf/renderer": "3.1.17",
+        "@navikt/nav-dekoratoren-moduler": "2.1.6",
+        "@react-pdf/renderer": "3.3.8",
         "buffer": "6.0.3",
         "core-js": "3.35.0",
         "dayjs": "1.11.10",
         "fetch-mock": "9.11.0",
         "file-saver": "2.0.5",
-        "ibantools": "4.3.9",
+        "ibantools": "4.5.0",
         "intl": "1.2.5",
         "js-cookie": "3.0.5",
         "jsdom": "23.2.0",
@@ -54,28 +54,28 @@
         "react-collapse": "5.1.1",
         "react-day-picker": "8.10.0",
         "react-dom": "18.2.0",
-        "react-hook-form": "7.49.3",
-        "react-intl": "6.6.1",
+        "react-hook-form": "7.51.0",
+        "react-intl": "6.6.2",
         "react-modal": "3.16.1",
-        "react-router-dom": "6.21.2",
+        "react-router-dom": "6.22.2",
         "react-scripts": "5.0.1",
         "react-select": "5.8.0",
         "ssri": "10.0.5"
     },
     "devDependencies": {
         "@testing-library/dom": "9.3.4",
-        "@testing-library/jest-dom": "6.2.0",
-        "@testing-library/react": "14.1.2",
+        "@testing-library/jest-dom": "6.4.2",
+        "@testing-library/react": "14.2.1",
         "@testing-library/user-event": "14.5.2",
         "@types/fetch-mock": "7.3.8",
         "@types/file-saver": "2.0.7",
-        "@types/jest": "29.5.11",
+        "@types/jest": "29.5.12",
         "@types/js-cookie": "3.0.6",
         "@types/jsdom": "21.1.6",
-        "@types/node": "20.11.5",
+        "@types/node": "20.11.24",
         "@types/node-fetch": "2.6.11",
         "@types/react": "18.2.48",
-        "@types/react-dom": "18.2.18",
+        "@types/react-dom": "18.2.19",
         "@types/react-modal": "3.16.3",
         "@types/react-router-dom": "5.3.3",
         "@types/react-select": "5.0.1",
@@ -83,15 +83,15 @@
         "@typescript-eslint/eslint-plugin": "6.19.0",
         "@typescript-eslint/parser": "6.19.0",
         "classnames": "2.5.1",
-        "eslint": "8.56.0",
+        "eslint": "8.57.0",
         "eslint-config-prettier": "9.1.0",
         "eslint-plugin-jsx-a11y": "6.8.0",
-        "eslint-plugin-react": "7.33.2",
+        "eslint-plugin-react": "7.34.0",
         "jest-fetch-mock": "3.0.3",
         "less": "4.2.0",
         "less-plugin-npm-import": "2.1.0",
         "less-watch-compiler": "1.16.3",
-        "prettier": "3.2.3",
+        "prettier": "3.2.5",
         "react-test-renderer": "18.2.0",
         "source-map-explorer": "2.5.3",
         "typescript": "4.9.5"
