--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
         "docker-stop": "docker stop personopplysninger",
         "start": "npm-run-all -p start:*",
         "start:less": "less-watch-compiler",
-        "start:ts": "react-scripts start",
+        "start:ts": "vite",
         "lint": "eslint ./src --ext .js,.jsx,.ts,.tsx",
         "postinstall": "cd server && npm install",
         "build": "npm-run-all -p build:*",
-        "build:js": "react-scripts build",
+        "build:js": "vite build",
         "build:css": "less-watch-compiler --run-once",
-        "test": "react-scripts test --watchAll=false --transformIgnorePatterns \"node_modules/(?!@navikt)/\"",
+        "test": "vite test --watchAll=false --transformIgnorePatterns \"node_modules/(?!@navikt)/\"",
         "preversion": "npm test && npm run build",
         "postversion": "git push && git push --tags",
         "analyze": "source-map-explorer 'build/static/js/*.js'"
@@ -59,7 +59,6 @@
         "react-intl": "6.6.2",
         "react-modal": "3.16.1",
         "react-router-dom": "6.22.2",
-        "react-scripts": "5.0.1",
         "react-select": "5.8.0",
         "ssri": "10.0.5"
     },
@@ -83,6 +82,7 @@
         "@types/react-test-renderer": "18.0.7",
         "@typescript-eslint/eslint-plugin": "6.19.0",
         "@typescript-eslint/parser": "6.19.0",
+        "@vitejs/plugin-react": "4.3.1",
         "classnames": "2.5.1",
         "eslint": "8.57.0",
         "eslint-config-prettier": "9.1.0",
@@ -95,7 +95,8 @@
         "prettier": "3.2.5",
         "react-test-renderer": "18.2.0",
         "source-map-explorer": "2.5.3",
-        "typescript": "4.9.5"
+        "typescript": "4.9.5",
+        "vite": "^5.3.3"
     },
     "resolutions": {},
     "browserslist": {
