--- a/package.json
+++ b/package.json
@@ -5,9 +5,6 @@
     "author": "NAV",
     "license": "MIT",
     "homepage": "/person/personopplysninger/",
-    "jest": {
-        "resetMocks": false
-    },
     "scripts": {
         "start": "npm-run-all -p start:*",
         "start:less": "less-watch-compiler",
@@ -17,16 +14,16 @@
         "build": "npm-run-all -p build:*",
         "build:js": "vite build",
         "build:css": "less-watch-compiler --run-once",
-        "test": "vite test --watchAll=false --transformIgnorePatterns \"node_modules/(?!@navikt)/\"",
+        "test": "vitest",
         "analyze": "source-map-explorer 'build/static/js/*.js'"
     },
     "dependencies": {
         "@grafana/faro-web-sdk": "1.4.1",
         "@grafana/faro-web-tracing": "1.4.1",
-        "@navikt/aksel-icons": "6.1.1",
+        "@navikt/aksel-icons": "6.13.0",
         "@navikt/arbeidsforhold": "3.4.1",
-        "@navikt/ds-css": "6.1.1",
-        "@navikt/ds-react": "6.1.1",
+        "@navikt/ds-css": "6.13.0",
+        "@navikt/ds-react": "6.13.0",
         "@navikt/fnrvalidator": "1.3.3",
         "@navikt/nav-dekoratoren-moduler": "2.1.6",
         "@navikt/nav-office-reception-info": "1.0.2",
@@ -57,12 +54,11 @@
     },
     "devDependencies": {
         "@testing-library/dom": "9.3.4",
-        "@testing-library/jest-dom": "6.4.2",
+        "@testing-library/jest-dom": "^6.4.6",
         "@testing-library/react": "14.2.1",
         "@testing-library/user-event": "14.5.2",
         "@types/fetch-mock": "7.3.8",
         "@types/file-saver": "2.0.7",
-        "@types/jest": "29.5.12",
         "@types/js-cookie": "3.0.6",
         "@types/jsdom": "21.1.6",
         "@types/node": "20.11.24",
@@ -81,7 +77,6 @@
         "eslint-config-prettier": "9.1.0",
         "eslint-plugin-jsx-a11y": "6.8.0",
         "eslint-plugin-react": "7.34.0",
-        "jest-fetch-mock": "3.0.3",
         "less": "4.2.0",
         "less-plugin-npm-import": "2.1.0",
         "less-watch-compiler": "1.16.3",
@@ -89,7 +84,10 @@
         "react-test-renderer": "18.2.0",
         "source-map-explorer": "2.5.3",
         "typescript": "4.9.5",
-        "vite": "^5.3.3"
+        "vite": "5.3.3",
+        "vite-tsconfig-paths": "^4.3.2",
+        "vitest": "1.6.0",
+        "vitest-fetch-mock": "^0.2.2"
     },
     "resolutions": {},
     "browserslist": {
