--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -5,8 +5,12 @@
         "skipLibCheck": true,
         "module": "ESNext",
         "moduleResolution": "bundler",
-        "allowSyntheticDefaultImports": true
+        "allowSyntheticDefaultImports": true,
+        "paths": {
+            "@/*": ["./src/*"]
+        },
+        "types": ["vite/client", "vitest/globals", "@testing-library/jest-dom"]
     },
-    "include": ["./vite.config.js", "./src/**/*"],
+    "include": ["vite.config.ts", "./src/**/*"],
     "exclude": ["node_modules"]
 }
