--- a/package.json
+++ b/package.json
@@ -85,9 +85,9 @@
         "source-map-explorer": "2.5.3",
         "typescript": "4.9.5",
         "vite": "5.3.3",
-        "vite-tsconfig-paths": "^4.3.2",
+        "vite-tsconfig-paths": "4.3.2",
         "vitest": "1.6.0",
-        "vitest-fetch-mock": "^0.2.2"
+        "vitest-fetch-mock": "0.2.2"
     },
     "resolutions": {},
     "browserslist": {
