--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "author": "NAV",
     "license": "MIT",
-    "homepage": "/person/personopplysninger/",
+    "homepage": "http://www.nav.no/person/personopplysninger/",
     "scripts": {
         "start": "npm-run-all -p start:*",
         "start:less": "less-watch-compiler",
@@ -18,88 +18,85 @@
         "analyze": "npx vite-bundle-visualizer"
     },
     "dependencies": {
-        "@grafana/faro-web-sdk": "1.4.1",
-        "@grafana/faro-web-tracing": "1.4.1",
+        "@grafana/faro-web-sdk": "1.8.2",
+        "@grafana/faro-web-tracing": "1.8.2",
         "@navikt/aksel-icons": "6.13.0",
-        "@navikt/arbeidsforhold": "3.4.1",
+        "@navikt/arbeidsforhold": "3.4.2-beta.1",
         "@navikt/ds-css": "6.13.0",
         "@navikt/ds-react": "6.13.0",
-        "@navikt/fnrvalidator": "1.3.3",
+        "@navikt/fnrvalidator": "2.1.0",
         "@navikt/nav-dekoratoren-moduler": "2.1.6",
-        "@navikt/nav-office-reception-info": "1.0.2",
-        "@react-pdf/renderer": "3.3.8",
+        "@navikt/nav-office-reception-info": "1.0.6",
+        "@react-pdf/renderer": "3.4.4",
         "buffer": "6.0.3",
-        "core-js": "3.35.0",
-        "dayjs": "1.11.10",
-        "fetch-mock": "9.11.0",
+        "core-js": "3.37.1",
+        "dayjs": "1.11.11",
+        "fetch-mock": "10.0.8",
         "file-saver": "2.0.5",
-        "ibantools": "4.5.0",
+        "ibantools": "4.5.1",
         "intl": "1.2.5",
         "js-cookie": "3.0.5",
-        "jsdom": "23.2.0",
+        "jsdom": "24.1.0",
         "lodash.throttle": "4.1.1",
         "node-cache": "5.1.2",
         "node-fetch": "3.3.2",
         "npm-run-all": "4.1.5",
-        "react": "18.2.0",
+        "react": "18.3.1",
         "react-collapse": "5.1.1",
-        "react-day-picker": "8.10.0",
-        "react-dom": "18.2.0",
-        "react-hook-form": "7.51.0",
-        "react-intl": "6.6.2",
+        "react-day-picker": "8.10.1",
+        "react-dom": "18.3.1",
+        "react-hook-form": "7.51.1",
+        "react-intl": "6.6.8",
         "react-modal": "3.16.1",
-        "react-router-dom": "6.22.2",
+        "react-router-dom": "6.24.1",
         "react-select": "5.8.0",
-        "ssri": "10.0.5"
+        "ssri": "10.0.6"
     },
     "devDependencies": {
-        "@testing-library/dom": "9.3.4",
-        "@testing-library/jest-dom": "^6.4.6",
-        "@testing-library/react": "14.2.1",
+        "@testing-library/dom": "10.3.2",
+        "@testing-library/jest-dom": "6.4.6",
+        "@testing-library/react": "16.0.0",
         "@testing-library/user-event": "14.5.2",
         "@types/fetch-mock": "7.3.8",
         "@types/file-saver": "2.0.7",
         "@types/js-cookie": "3.0.6",
-        "@types/jsdom": "21.1.6",
-        "@types/node": "20.11.24",
+        "@types/jsdom": "21.1.7",
+        "@types/node": "20.14.10",
         "@types/node-fetch": "2.6.11",
-        "@types/react": "18.2.48",
-        "@types/react-dom": "18.2.19",
+        "@types/react": "18.3.3",
+        "@types/react-dom": "18.3.0",
         "@types/react-modal": "3.16.3",
         "@types/react-router-dom": "5.3.3",
         "@types/react-select": "5.0.1",
-        "@types/react-test-renderer": "18.0.7",
-        "@typescript-eslint/eslint-plugin": "6.19.0",
-        "@typescript-eslint/parser": "6.19.0",
+        "@types/react-test-renderer": "18.3.0",
+        "@typescript-eslint/eslint-plugin": "7.16.1",
+        "@typescript-eslint/parser": "7.16.1",
         "@vitejs/plugin-react": "4.3.1",
         "classnames": "2.5.1",
         "eslint": "8.57.0",
         "eslint-config-prettier": "9.1.0",
-        "eslint-plugin-jsx-a11y": "6.8.0",
-        "eslint-plugin-react": "7.34.0",
+        "eslint-plugin-jsx-a11y": "6.9.0",
+        "eslint-plugin-react": "7.34.4",
         "less": "4.2.0",
         "less-plugin-npm-import": "2.1.0",
         "less-watch-compiler": "1.16.3",
-        "prettier": "3.2.5",
-        "react-test-renderer": "18.2.0",
+        "prettier": "3.3.3",
+        "react-test-renderer": "18.3.1",
         "source-map-explorer": "2.5.3",
-        "typescript": "4.9.5",
+        "typescript": "5.5.3",
         "vite": "5.3.3",
         "vite-tsconfig-paths": "4.3.2",
-        "vitest": "1.6.0",
-        "vitest-fetch-mock": "0.2.2"
+        "vitest": "2.0.3",
+        "vitest-fetch-mock": "0.3.0"
     },
-    "resolutions": {},
     "browserslist": {
         "production": [
-            ">0.2%",
+            ">0.2% and last 2 versions",
             "not dead",
             "not op_mini all"
         ],
         "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
+            "last 1 version"
         ]
     }
 }
