--- a/server/package.json
+++ b/server/package.json
@@ -11,19 +11,18 @@
         "@navikt/nav-dekoratoren-moduler": "2.1.6",
         "compression": "1.7.4",
         "dotenv": "16.4.5",
-        "express": "4.18.3",
-        "html-react-parser": "5.1.8",
-        "jsdom": "20.0.0",
+        "express": "4.19.2",
+        "html-react-parser": "5.1.10",
+        "jsdom": "24.1.0",
         "mustache-express": "1.3.2",
         "node-cache": "5.1.2",
         "node-fetch": "3.3.2",
-        "react": "18.2.0",
-        "winston": "3.12.0"
+        "react": "18.3.1",
+        "winston": "3.13.1"
     },
     "browserslist": [
-        ">0.2%",
+        ">0.2% and last 2 versions",
         "not dead",
-        "not ie <= 11",
         "not op_mini all"
     ]
 }
