--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
         "source-map-explorer": "2.5.3",
         "typescript": "5.5.3",
         "vite": "5.3.3",
+        "vite-plugin-node-polyfills": "^0.22.0",
         "vite-tsconfig-paths": "4.3.2",
         "vitest": "2.0.3",
         "vitest-fetch-mock": "0.3.0"
