--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "analyze": "npx vite-bundle-visualizer"
     },
     "dependencies": {
+        "@grafana/faro-react": "1.9.0",
         "@grafana/faro-web-sdk": "1.8.2",
         "@grafana/faro-web-tracing": "1.8.2",
         "@navikt/aksel-icons": "6.13.0",
