--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
         "ssri": "10.0.6"
     },
     "devDependencies": {
-        "@navikt/eslint-config-navno": "^1.3.1",
+        "@navikt/eslint-config-navno": "1.3.1",
         "@testing-library/dom": "10.3.2",
         "@testing-library/jest-dom": "6.4.6",
         "@testing-library/react": "16.0.0",
