--- a/package.json
+++ b/package.json
@@ -18,45 +18,45 @@
         "analyze": "npx vite-bundle-visualizer"
     },
     "dependencies": {
-        "@grafana/faro-web-sdk": "1.8.2",
-        "@grafana/faro-web-tracing": "1.8.2",
+        "@grafana/faro-web-sdk": "1.10.0",
+        "@grafana/faro-web-tracing": "1.10.0",
         "@navikt/aksel-icons": "6.13.0",
         "@navikt/arbeidsforhold": "4.0.1",
         "@navikt/ds-css": "6.13.0",
         "@navikt/ds-react": "6.13.0",
-        "@navikt/fnrvalidator": "2.1.0",
-        "@navikt/nav-dekoratoren-moduler": "2.1.6",
-        "@navikt/nav-office-reception-info": "1.0.6",
+        "@navikt/fnrvalidator": "2.1.2",
+        "@navikt/nav-dekoratoren-moduler": "3.1.0",
+        "@navikt/nav-office-reception-info": "1.0.7",
         "@react-pdf/renderer": "3.4.4",
         "buffer": "6.0.3",
-        "core-js": "3.37.1",
-        "dayjs": "1.11.12",
-        "fetch-mock": "10.1.1",
+        "core-js": "3.38.1",
+        "dayjs": "1.11.13",
+        "fetch-mock": "11.1.3",
         "file-saver": "2.0.5",
         "ibantools": "4.5.1",
         "intl": "1.2.5",
         "js-cookie": "3.0.5",
-        "jsdom": "24.1.0",
+        "jsdom": "24.1.3",
         "lodash.throttle": "4.1.1",
         "node-cache": "5.1.2",
         "node-fetch": "3.3.2",
         "npm-run-all": "4.1.5",
         "react": "18.3.1",
         "react-collapse": "5.1.1",
-        "react-day-picker": "8.10.1",
+        "react-day-picker": "9.0.9",
         "react-dom": "18.3.1",
-        "react-hook-form": "7.51.1",
+        "react-hook-form": "7.53.0",
         "react-intl": "6.6.8",
         "react-modal": "3.16.1",
-        "react-router-dom": "6.24.1",
+        "react-router-dom": "6.26.2",
         "react-select": "5.8.0",
         "ssri": "10.0.6"
     },
     "devDependencies": {
         "@navikt/eslint-config-navno": "1.3.1",
-        "@testing-library/dom": "10.3.2",
-        "@testing-library/jest-dom": "6.4.6",
-        "@testing-library/react": "16.0.0",
+        "@testing-library/dom": "10.4.0",
+        "@testing-library/jest-dom": "6.5.0",
+        "@testing-library/react": "16.0.1",
         "@testing-library/user-event": "14.5.2",
         "@types/fetch-mock": "7.3.8",
         "@types/file-saver": "2.0.7",
@@ -64,7 +64,7 @@
         "@types/jsdom": "21.1.7",
         "@types/node": "20.14.10",
         "@types/node-fetch": "2.6.11",
-        "@types/react": "18.3.3",
+        "@types/react": "18.3.7",
         "@types/react-dom": "18.3.0",
         "@types/react-modal": "3.16.3",
         "@types/react-router-dom": "5.3.3",
@@ -76,19 +76,19 @@
         "classnames": "2.5.1",
         "eslint": "8.57.0",
         "eslint-config-prettier": "9.1.0",
-        "eslint-plugin-jsx-a11y": "6.9.0",
-        "eslint-plugin-react": "7.34.4",
+        "eslint-plugin-jsx-a11y": "6.10.0",
+        "eslint-plugin-react": "7.36.1",
         "less": "4.2.0",
         "less-plugin-npm-import": "2.1.0",
         "less-watch-compiler": "1.16.3",
         "prettier": "3.3.3",
         "react-test-renderer": "18.3.1",
         "source-map-explorer": "2.5.3",
-        "typescript": "5.5.3",
-        "vite": "5.3.3",
-        "vite-plugin-node-polyfills": "^0.22.0",
-        "vite-tsconfig-paths": "4.3.2",
-        "vitest": "2.0.3",
+        "typescript": "5.6.2",
+        "vite": "5.4.6",
+        "vite-plugin-node-polyfills": "0.22.0",
+        "vite-tsconfig-paths": "5.0.1",
+        "vitest": "2.1.1",
         "vitest-fetch-mock": "0.3.0"
     },
     "browserslist": {
