--- a/package.json
+++ b/package.json
@@ -18,38 +18,38 @@
         "analyze": "npx vite-bundle-visualizer"
     },
     "dependencies": {
-        "@grafana/faro-web-sdk": "1.10.0",
-        "@grafana/faro-web-tracing": "1.10.0",
-        "@navikt/aksel-icons": "6.13.0",
-        "@navikt/arbeidsforhold": "4.0.1",
-        "@navikt/ds-css": "6.13.0",
-        "@navikt/ds-react": "6.13.0",
+        "@grafana/faro-web-sdk": "1.10.1",
+        "@grafana/faro-web-tracing": "1.10.1",
+        "@navikt/aksel-icons": "7.1.0",
+        "@navikt/arbeidsforhold": "4.0.2-beta.0",
+        "@navikt/ds-css": "7.1.0",
+        "@navikt/ds-react": "7.1.0",
         "@navikt/fnrvalidator": "2.1.2",
         "@navikt/nav-dekoratoren-moduler": "3.1.0",
-        "@navikt/nav-office-reception-info": "1.0.7",
+        "@navikt/nav-office-reception-info": "1.0.8-beta.0",
         "@react-pdf/renderer": "3.4.4",
         "buffer": "6.0.3",
         "core-js": "3.38.1",
         "dayjs": "1.11.13",
-        "fetch-mock": "11.1.3",
+        "fetch-mock": "11.1.5",
         "file-saver": "2.0.5",
         "ibantools": "4.5.1",
         "intl": "1.2.5",
         "js-cookie": "3.0.5",
-        "jsdom": "24.1.3",
+        "jsdom": "25.0.1",
         "lodash.throttle": "4.1.1",
         "node-cache": "5.1.2",
         "node-fetch": "3.3.2",
         "npm-run-all": "4.1.5",
         "react": "18.3.1",
         "react-collapse": "5.1.1",
-        "react-day-picker": "9.0.9",
+        "react-day-picker": "9.1.3",
         "react-dom": "18.3.1",
         "react-hook-form": "7.53.0",
-        "react-intl": "6.6.8",
+        "react-intl": "6.7.0",
         "react-modal": "3.16.1",
         "react-router-dom": "6.26.2",
-        "react-select": "5.8.0",
+        "react-select": "5.8.1",
         "ssri": "10.0.6"
     },
     "devDependencies": {
